# schutte_vertegenwoordigers

./: .gitignore  1.xml  PLAN.md  colofon.html  compare_ocr.py  compare_ocr_report.tsv  compare_ocr_report.txt  dep_names.tsv  deploy.sh  download_scans.py  functie.html  geo.html  geoindex_buitenland.xml  geoindex_nederland.xml  heatmap.html  index.html  inhoud2.xml  linkify_refs.py  ocr_scans.py  personen_index_nederland.xml  personenindex_buitenland.xml  persons.html  report.md  sample_parse_hocr.py  schutte_1672_names.tsv  schutte_buitenland_in_nl.parquet  schutte_buitenland_in_nl.xlsx  schutte_df.csv  schutte_df.html  schutte_df.parquet  schutte_in_raa.xlsx  schutte_in_raa_straight_merge.xlsx  schutte_in_raa_straight_merge_url.html  schutte_nl_in_buitenland.parquet  schutte_nl_in_buitenland.xlsx  search.html  swimlane.html  timeline.html  toc_bl.xml  toc_nl.xml
_deploy/: colofon.html  functie.html  geo.html  heatmap.html  index.html  persons.html  (+3 more)
lemma_extractor/: README.md  analyze_html.py  build.py  inspect_lemmas.py  main.py  pyproject.toml  strip_trailing_hoofd.py  survey_structure.py  test_pyphen.py
lemma_extractor/src/lemma_extractor/: assemble_corpus.py  build_refs.py  export_json.py  extract_lemmas.py  group_lemmas.py  linkify_refs.py  parse_hocr.py  parse_html.py  parse_index.py  read_excel.py  tag_xml.py  verify.py
lemma_extractor/static/: style.css
lemma_extractor/templates/: base.html  colofon.html  corpus_index.html  functie.html  geo.html  heatmap.html  index.html  landen.html  lemma.html  persons.html  search.html  swimlane.html  timeline.html
(+4802 files in other folders)
